--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNFpuu+/TYd+gYmZeGfSk12",
+      "authorship_tag": "ABX9TyOiCv3t3xRavjuzZuW6hdpn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +30,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h3><center>REGRESSÃO</center></h3>\n",
+        "**<h3><center>REGRESSÃO</center></h3>**\n",
         "<p align=\"Justify\">É uma técnica que permite quantificar e inferir a relação de uma variável dependente (variável de resposta, objetivo) com variáveis independentes (variáveis explicativas, previsoras). A análise da regressão pode ser usada como um método descritivo da análise de dados (por exemplo, o ajustamento de curvas).</p>\n",
-        "\n",
+        "<hr size=\"1\" width=\"100%\" align=\"center\" noshade>\n",
         "\n",
         "\n"
       ],
@@ -43,7 +43,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**REGRESSÃO LINEAR SIMPLES**"
+        "REGRESSÃO LINEAR SIMPLES\n",
+        "<p align=\"Justify\">Inclui somente duas variáveis: uma independente e outra dependente. \n",
+        "A variável dependente é aquela que está sendo explicada, \n",
+        "enquanto a variável independente é aquela que é utilizada \n",
+        "para explicar a variação na variável dependente.</p>\n"
       ],
       "metadata": {
         "id": "uKX-f3GE0DGw"
@@ -51,23 +55,274 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "XujWIKoex8E_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XujWIKoex8E_",
+        "outputId": "ef68b2d3-2d55-497c-8974-606231cdda76"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: plotly in /usr/local/lib/python3.7/dist-packages (5.5.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from plotly) (1.15.0)\n",
+            "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.7/dist-packages (from plotly) (8.0.1)\n"
+          ]
+        }
+      ],
       "source": [
-        "'''\n",
-        "Regressão linear simples\n",
-        "inclui somente duas variáveis: uma independente e uma dependente. \n",
-        "A variável dependente é aquela que está sendo explicada, \n",
-        "enquanto a variável independente é aquela que é utilizada \n",
-        "para explicar a variação na variável dependente.\n",
         "\n",
-        "Instalação da bibliotecas\n",
+        "#biblioteca plotly para visualização de gráficos dinâmicos:\n",
         "\n",
-        "'''\n"
+        "!pip install plotly --upgrade\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#plotly,seaborn e matplotlib para gerar e visualizar gráficos;\n",
+        "#pandas parar carregar o arquivo .csv;\n",
+        "#numpy para realizar os cálculos em Arrays Multidimensionais.\n",
+        "\n",
+        "import plotly.express as px\n",
+        "import seaborn as sns \n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import numpy as np\n"
+      ],
+      "metadata": {
+        "id": "EsBUP9JszuUD"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "BASE PLANO DE SAÚDE \n",
+        "<p align=\"Justify\">Base de dados ilustrativa para estudo de regressão linear simples com 10 registros. Mostra na primeira coluna a idade já na segunda, o custo.</p>"
+      ],
+      "metadata": {
+        "id": "SPMoIRVqTefe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#Carregamento do arquivo\n",
+        "\n",
+        "base_plano_saude = pd.read_csv('plano_saude.csv')\n",
+        "base_plano_saude"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "id": "49e8ppCITqoj",
+        "outputId": "b5dc0e32-1e68-4a97-df1c-f77a1b439883"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <div id=\"df-ac648471-e115-4493-a7b8-ebbc6afe00c5\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>idade</th>\n",
+              "      <th>custo</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>18</td>\n",
+              "      <td>871</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>23</td>\n",
+              "      <td>1132</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>28</td>\n",
+              "      <td>1242</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>33</td>\n",
+              "      <td>1356</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>38</td>\n",
+              "      <td>1488</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>43</td>\n",
+              "      <td>1638</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>48</td>\n",
+              "      <td>2130</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>53</td>\n",
+              "      <td>2454</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>58</td>\n",
+              "      <td>3066</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>63</td>\n",
+              "      <td>4090</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ac648471-e115-4493-a7b8-ebbc6afe00c5')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-ac648471-e115-4493-a7b8-ebbc6afe00c5 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-ac648471-e115-4493-a7b8-ebbc6afe00c5');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ],
+            "text/plain": [
+              "   idade  custo\n",
+              "0     18    871\n",
+              "1     23   1132\n",
+              "2     28   1242\n",
+              "3     33   1356\n",
+              "4     38   1488\n",
+              "5     43   1638\n",
+              "6     48   2130\n",
+              "7     53   2454\n",
+              "8     58   3066\n",
+              "9     63   4090"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PERGUNTA SOBRE O CONTEXTO\n",
+        "<p align=\"Justify\">De acordo com os dados apresentados, quanto poderia custar o plano \n",
+        "saúde dependendo da idade da pessoa?\n",
+        "\n",
+        "Essa pergunta pode ser respondida por meio da regressão\n",
+        "linear simples, pois há apenas duas variáveis: a dependente (custo) e a \n",
+        "independente, previsora (idade)</p>\n"
+      ],
+      "metadata": {
+        "id": "iGkskXaeVVBP"
+      }
     },
     {
       "cell_type": "code",
@@ -75,7 +330,7 @@
         ""
       ],
       "metadata": {
-        "id": "EsBUP9JszuUD"
+        "id": "0Raj26D5VeE7"
       },
       "execution_count": null,
       "outputs": []
