--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOiCv3t3xRavjuzZuW6hdpn",
+      "authorship_tag": "ABX9TyMzUER/wv/Sazzo9D57/siA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "REGRESSÃO LINEAR SIMPLES\n",
+        "**REGRESSÃO LINEAR SIMPLES**\n",
         "<p align=\"Justify\">Inclui somente duas variáveis: uma independente e outra dependente. \n",
         "A variável dependente é aquela que está sendo explicada, \n",
         "enquanto a variável independente é aquela que é utilizada \n",
@@ -104,7 +104,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "BASE PLANO DE SAÚDE \n",
+        "**BASE PLANO DE SAÚDE** \n",
         "<p align=\"Justify\">Base de dados ilustrativa para estudo de regressão linear simples com 10 registros. Mostra na primeira coluna a idade já na segunda, o custo.</p>"
       ],
       "metadata": {
@@ -312,7 +312,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "PERGUNTA SOBRE O CONTEXTO\n",
+        "**PERGUNTA SOBRE O CONTEXTO**\n",
         "<p align=\"Justify\">De acordo com os dados apresentados, quanto poderia custar o plano \n",
         "saúde dependendo da idade da pessoa?\n",
         "\n",
