--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzUER/wv/Sazzo9D57/siA",
+      "authorship_tag": "ABX9TyPY0euhjOSCL9rceJ217EkG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**<h3><center>REGRESSÃO</center></h3>**\n",
+        "<h3><center>REGRESSÃO</center></h3>\n",
         "<p align=\"Justify\">É uma técnica que permite quantificar e inferir a relação de uma variável dependente (variável de resposta, objetivo) com variáveis independentes (variáveis explicativas, previsoras). A análise da regressão pode ser usada como um método descritivo da análise de dados (por exemplo, o ajustamento de curvas).</p>\n",
         "<hr size=\"1\" width=\"100%\" align=\"center\" noshade>\n",
         "\n",
@@ -105,7 +105,7 @@
       "cell_type": "markdown",
       "source": [
         "**BASE PLANO DE SAÚDE** \n",
-        "<p align=\"Justify\">Base de dados ilustrativa para estudo de regressão linear simples com 10 registros. Mostra na primeira coluna a idade já na segunda, o custo.</p>"
+        "<p align=\"Justify\">Base de dados ilustrativa para estudo de regressão linear simples com 10 registros. Mostra na primeira coluna a idade; já na segunda, o custo.</p>"
       ],
       "metadata": {
         "id": "SPMoIRVqTefe"
