--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdFNbUV7yR/rRfLIr35W4v",
+      "authorship_tag": "ABX9TyMZ8lmSCJrhgpWNdjkWcEWj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -316,9 +316,10 @@
         "<p align=\"Justify\">De acordo com os dados apresentados, quanto poderia custar o plano \n",
         "saúde dependendo da idade da pessoa?\n",
         "\n",
+        "\n",
         "Essa pergunta pode ser respondida por meio de um modelo de regressão\n",
         "linear simples, pois há apenas duas variáveis: a dependente (custo) e a \n",
-        "independente, previsora (idade)</p>\n"
+        "independente, previsora (idade)\n"
       ],
       "metadata": {
         "id": "iGkskXaeVVBP"
@@ -389,7 +390,7 @@
         "**COEFICIENTE DE CORRELAÇÃO**\n",
         "<p align=\"Justify\">O coeficiente de correlação de Pearson é um teste que mede a relação estatística entre duas variáveis contínuas. \n",
         "\n",
-        "Apresenta um intervalo de valores de +1 a -1. Um valor de 0 indica que não há associação entre as duas variáveis. Um valor maior que 0 indica uma associação positiva. Isto é, à medida que o valor de uma variável aumenta, o mesmo acontece com o valor da outra variável.</P>"
+        "Apresenta um intervalo de valores de +1 a -1. Um valor de 0 indica que não há associação entre as duas variáveis. Um valor maior que 0 indica uma associação positiva. Isto é, à medida que o valor de uma variável aumenta, o mesmo acontece com o valor da outra variável."
       ],
       "metadata": {
         "id": "xf4U6E8Cgstt"
