--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZ8lmSCJrhgpWNdjkWcEWj",
+      "authorship_tag": "ABX9TyOcvH5/d1bLn8NKY7ML+Ztb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h3><center>REGRESSÃO</center></h3>\n",
+        "<h2><center>REGRESSÃO</center></h2>\n",
         "<p align=\"Justify\">É uma técnica que permite quantificar e inferir a relação de uma variável dependente (variável de resposta, objetivo) com variáveis independentes (variáveis explicativas, previsoras). A análise da regressão pode ser usada como um método descritivo da análise de dados (por exemplo, o ajustamento de curvas).</p>\n",
         "<hr size=\"1\" width=\"100%\" align=\"center\" noshade>\n",
         "\n",
@@ -43,7 +43,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**REGRESSÃO LINEAR SIMPLES**\n",
+        "<h3><center>REGRESSÃO LINEAR SIMPLES</center></h3>\n",
         "<p align=\"Justify\">Inclui somente duas variáveis: uma independente e outra dependente. \n",
         "A variável dependente é aquela que está sendo explicada, \n",
         "enquanto a variável independente é aquela que é utilizada \n",
@@ -75,7 +75,6 @@
         }
       ],
       "source": [
-        "\n",
         "#biblioteca plotly para visualização de gráficos dinâmicos:\n",
         "\n",
         "!pip install plotly --upgrade\n"
@@ -882,6 +881,38 @@
           "execution_count": 24
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h3><center>REGRESSÃO LINEAR MÚLTIPLA</center></h3>\n",
+        "\n",
+        "<p align=\"Justify\">É um modelo de análise que usamos quando modelamos a relação linear entre uma variável de desfecho contínua e múltiplas variáveis preditoras que podem ser contínuas ou categóricas.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "MUPyCf3myOkc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "asILw8EEy-Iz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "0Jg1Y4yGxiI2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
