--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2u44GtapetQjQRTFLMZq7",
+      "authorship_tag": "ABX9TyOfue/N4l9MD1JYrhdK0HER",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h3><center>REGRESSÃO LINEAR SIMPLES</center></h3>\n",
+        "<h3><center>1 REGRESSÃO LINEAR SIMPLES</center></h3>\n",
         "<p align=\"Justify\">Inclui somente duas variáveis: uma independente e outra dependente. \n",
         "A variável dependente é aquela que está sendo explicada, \n",
         "enquanto a variável independente é aquela que é utilizada \n",
@@ -103,7 +103,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**BASE PLANO DE SAÚDE** \n",
+        "**1.1 BASE PLANO DE SAÚDE** \n",
         "<p align=\"Justify\">Base de dados ilustrativa para estudo de regressão linear simples com 10 registros. Mostra na primeira coluna a idade; já na segunda, o custo.</p>"
       ],
       "metadata": {
@@ -311,7 +311,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**PERGUNTA SOBRE O CONTEXTO**\n",
+        "**1.2 PERGUNTA SOBRE O CONTEXTO**\n",
         "<p align=\"Justify\">De acordo com os dados apresentados, quanto poderia custar o plano \n",
         "saúde dependendo da idade da pessoa?\n",
         "\n",
@@ -386,7 +386,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**COEFICIENTE DE CORRELAÇÃO**\n",
+        "**1.3 COEFICIENTE DE CORRELAÇÃO**\n",
         "<p align=\"Justify\">O coeficiente de correlação de Pearson é um teste que mede a relação estatística entre duas variáveis contínuas. \n",
         "\n",
         "Apresenta um intervalo de valores de +1 a -1. Um valor de 0 indica que não há associação entre as duas variáveis. Um valor maior que 0 indica uma associação positiva. Isto é, à medida que o valor de uma variável aumenta, o mesmo acontece com o valor da outra variável."
@@ -885,19 +885,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h3><center>REGRESSÃO LINEAR MÚLTIPLA</center></h3>\n",
-        "\n",
-        "<p align=\"Justify\">É um modelo de análise que usamos quando modelamos a relação linear entre uma variável de desfecho contínua e múltiplas variáveis preditoras que podem ser contínuas ou categóricas.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "MUPyCf3myOkc"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**BASE PREÇO DAS CASAS**\n"
+        "**1.4 BASE PREÇO DAS CASAS**\n"
       ],
       "metadata": {
         "id": "asILw8EEy-Iz"
@@ -2528,6 +2516,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h3><center>REGRESSÃO LINEAR MÚLTIPLA</center></h3>\n",
+        "\n",
+        "<p align=\"Justify\">É um modelo de análise que usamos quando modelamos a relação linear entre uma variável de desfecho contínua e múltiplas variáveis preditoras que podem ser contínuas ou categóricas."
+      ],
+      "metadata": {
+        "id": "yccR9YYAAcNF"
+      }
     }
   ]
 }
