--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNzSQdFKrVgUZVcjix7xZOV",
+      "authorship_tag": "ABX9TyMwe4kLAkuysOY+grw1ImUW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3027,6 +3027,27 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**MÉTRICAS DE AVALIAÇÃO**\n",
+        "\n",
+        "\n",
+        "<p align=\"Justify\">Mean Squared Error (MSE): calcula a média dos erros do modelo ao quadrado - diferenças menores recebem menos peso que as maiores <w>\n",
+        "\n",
+        "\n",
+        "Root Mean Squared Error (RMSE): é a raiz quadrada do MSE. O erro volta a ter as unidades de medida originais da variável dependente.<w>\n",
+        "\n",
+        "\n",
+        "Mean Absolute Error (MAE): diferença absoluta entre as previsões eos valores reais - atribui o mesmo peso a todas as diferenças, de maneira linear.<w>\n",
+        "\n",
+        "\n",
+        "Mean Absolute Percentage Error (MAPE): calcula a média percentual do desvio absoluto entre as previsões e a realidade. </p>"
+      ],
+      "metadata": {
+        "id": "EqORK02D-BM6"
+      }
     },
     {
       "cell_type": "code",
