--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMwe4kLAkuysOY+grw1ImUW",
+      "authorship_tag": "ABX9TyMWD4QsWbhMb+q/WYUNE6Mo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3033,17 +3033,14 @@
       "source": [
         "**MÉTRICAS DE AVALIAÇÃO**\n",
         "\n",
+        "<ul>\n",
+        "<li><p align=\"Justify\"> Mean Squared Error (MSE): calcula a média dos erros do modelo ao quadrado - diferenças menores recebem menos peso que as maiores. </li>\n",
+        "<li>Root Mean Squared Error (RMSE): é a raiz quadrada do MSE. O erro volta a ter as unidades de medida originais da variável dependente.</li>\n",
         "\n",
-        "<p align=\"Justify\">Mean Squared Error (MSE): calcula a média dos erros do modelo ao quadrado - diferenças menores recebem menos peso que as maiores <w>\n",
+        "<li>Mean Absolute Error (MAE): diferença absoluta entre as previsões eos valores reais - atribui o mesmo peso a todas as diferenças, de maneira linear.</li>\n",
         "\n",
-        "\n",
-        "Root Mean Squared Error (RMSE): é a raiz quadrada do MSE. O erro volta a ter as unidades de medida originais da variável dependente.<w>\n",
-        "\n",
-        "\n",
-        "Mean Absolute Error (MAE): diferença absoluta entre as previsões eos valores reais - atribui o mesmo peso a todas as diferenças, de maneira linear.<w>\n",
-        "\n",
-        "\n",
-        "Mean Absolute Percentage Error (MAPE): calcula a média percentual do desvio absoluto entre as previsões e a realidade. </p>"
+        "<li>Mean Absolute Percentage Error (MAPE): calcula a média percentual do desvio absoluto entre as previsões e a realidade. </li> </p>\n",
+        "</ul>"
       ],
       "metadata": {
         "id": "EqORK02D-BM6"
