--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNmf2aaK1pW3wvU3ytVHsq7",
+      "authorship_tag": "ABX9TyOQUUrlVZV4KGYh0a9CcWpf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3034,13 +3034,13 @@
         "**MÉTRICAS DE AVALIAÇÃO**\n",
         "\n",
         "<ul>\n",
-        "<li><p align=\"Justify\"> Mean Squared Error (MSE): calcula a média dos erros do modelo ao quadrado - diferenças menores recebem menos peso que as maiores. </li>\n",
+        "<li>Mean Squared Error (MSE): calcula a média dos erros do modelo ao quadrado - diferenças menores recebem menos peso que as maiores. </li>\n",
         "\n",
         "<li>Root Mean Squared Error (RMSE): é a raiz quadrada do MSE. O erro volta a ter as unidades de medida originais da variável dependente.</li>\n",
         "\n",
         "<li>Mean Absolute Error (MAE): diferença absoluta entre as previsões eos valores reais - atribui o mesmo peso a todas as diferenças, de maneira linear.</li>\n",
         "\n",
-        "<li>Mean Absolute Percentage Error (MAPE): calcula a média percentual do desvio absoluto entre as previsões e a realidade. </li> </p>\n",
+        "<li>Mean Absolute Percentage Error (MAPE): calcula a média percentual do desvio absoluto entre as previsões e a realidade. </li>\n",
         "</ul>"
       ],
       "metadata": {
