--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNO3w4gaj541Lb8x/D2zIdn",
+      "authorship_tag": "ABX9TyP7E2xauUcrA/78eOSOIrw3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2607,7 +2607,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**CRIAÇÃO DO MODELO DE REGRESSÃO LINEAR**"
+        "**1.6 CRIAÇÃO DO MODELO DE REGRESSÃO LINEAR**"
       ],
       "metadata": {
         "id": "OzBj4T5rriEG"
@@ -3031,7 +3031,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**MÉTRICAS DE AVALIAÇÃO**\n",
+        "**1.7 MÉTRICAS DE AVALIAÇÃO**\n",
         "\n",
         "<ul>\n",
         "<li>Mean Squared Error (MSE): calcula a média dos erros do modelo ao quadrado - diferenças menores recebem menos peso que as maiores. </li>\n",
@@ -3318,7 +3318,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h3><center>REGRESSÃO LINEAR MÚLTIPLA</center></h3>\n",
+        "<h3><center>2 REGRESSÃO LINEAR MÚLTIPLA</center></h3>\n",
         "\n",
         "<p align=\"Justify\">É um modelo de análise que usamos quando modelamos a relação linear entre uma variável de desfecho contínua e múltiplas variáveis preditoras que podem ser contínuas ou categóricas."
       ],
