--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMuFrSE253S0Spkejy+nb3E",
+      "authorship_tag": "ABX9TyOl9JnBtRWUnNgD9epclrVE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5232,7 +5232,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**4 REGRESSÃO COM ÁRVORES DE DECISÃO**"
+        "<h3><center>4 REGRESSÃO COM ÁRVORES DE DECISÃO</center></h3>"
       ],
       "metadata": {
         "id": "PZyLqz3FUeDK"
