--- a/regressao.ipynb
+++ b/regressao.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "regressao.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOi3/JDmE/kYF20NHXBk1tk",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/WMFrts/regressao/blob/main/regressao.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -2419,6 +2431,9 @@
         "# criação da variável e utilização do plt\n",
         "# passagem do tamanho para figure\n",
         "\n",
+        "# quanto mais claro o retângulo, maior a correlação entre o atributo\n",
+        "# da linha com o correspondente da coluna\n",
+        "\n",
         "figura = plt.figure(figsize = (18, 18))\n",
         "sns.heatmap(base_casas.corr(), annot= True);"
       ],
@@ -2428,9 +2443,9 @@
           "height": 1000
         },
         "id": "-fkrACs631Wi",
-        "outputId": "2e4064b3-5812-46c9-d8e2-9b25a1372832"
+        "outputId": "9ab38e01-4d3e-4841-a9ca-33b32ea27bf8"
       },
-      "execution_count": 28,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "display_data",
